Prilagodba za Linux - nastavak
- Dodan JACK
- Riješen problem s pronalaskom audio uređaja
- Dodana mogućnost odabira za sample rate
- Ažurirane upute

--- a/Software/audio-visualizer/mainwindow.ui
+++ b/Software/audio-visualizer/mainwindow.ui
@@ -63,6 +63,30 @@
        </spacer>
       </item>
       <item>
+       <widget class="QLabel" name="label_6">
+        <property name="text">
+         <string>Sample rate:</string>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QComboBox" name="comboBox_SampleRate">
+        <property name="editable">
+         <bool>true</bool>
+        </property>
+        <item>
+         <property name="text">
+          <string>44100</string>
+         </property>
+        </item>
+        <item>
+         <property name="text">
+          <string>48000</string>
+         </property>
+        </item>
+       </widget>
+      </item>
+      <item>
        <widget class="QPushButton" name="pushButton_StartStop">
         <property name="text">
          <string>Započni stream</string>
@@ -163,7 +187,7 @@
      <x>0</x>
      <y>0</y>
      <width>800</width>
-     <height>21</height>
+     <height>20</height>
     </rect>
    </property>
   </widget>
