Prilagodba za Linux - nastavak
- Riješen problem s mikrofonom na Linuxu: instalacija PulseAudio
- Ažurirane upute (dodan postupak instalacije PulseAudio te opis korištenja)
- Dodana mogućnost osvježavanja uređaja

--- a/Software/audio-visualizer/mainwindow.ui
+++ b/Software/audio-visualizer/mainwindow.ui
@@ -50,6 +50,13 @@
        </layout>
       </item>
       <item>
+       <widget class="QPushButton" name="pushButton_OsvjeziUredaje">
+        <property name="text">
+         <string>Osvježi uređaje</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <spacer name="horizontalSpacer">
         <property name="orientation">
          <enum>Qt::Horizontal</enum>
