--- a/Software/audio-visualizer/settingsdialog.ui
+++ b/Software/audio-visualizer/settingsdialog.ui
@@ -148,7 +148,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QComboBox" name="comboBox"/>
+            <widget class="QComboBox" name="comboBox_scaleFactor"/>
            </item>
           </layout>
          </item>
