--- a/Software/audio-visualizer/settingsdialog.ui
+++ b/Software/audio-visualizer/settingsdialog.ui
@@ -6,18 +6,30 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>500</width>
+    <width>577</width>
     <height>468</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>577</width>
+    <height>468</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>577</width>
+    <height>468</height>
+   </size>
+  </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>VisualFREQ - Postavke</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout_4">
    <item>
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
-      <string>Engine</string>
+      <string>Pogon</string>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
       <item>
@@ -142,7 +154,7 @@
            </size>
           </property>
           <property name="title">
-           <string>Waveform</string>
+           <string>Oblik vala</string>
           </property>
           <layout class="QHBoxLayout" name="horizontalLayout_9">
            <item>
@@ -158,7 +170,7 @@
         <item>
          <widget class="QGroupBox" name="groupBox_5">
           <property name="title">
-           <string>Bar Spectrum</string>
+           <string>Stupčasti spektar</string>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_5">
            <item>
@@ -166,7 +178,7 @@
              <item>
               <widget class="QCheckBox" name="checkBox_drawGrid">
                <property name="text">
-                <string>Iscrtaj rešetku na svakih</string>
+                <string>Iscrtaj rešetku svakih</string>
                </property>
               </widget>
              </item>
@@ -281,7 +293,7 @@
       <item>
        <widget class="QGroupBox" name="groupBox_3">
         <property name="title">
-         <string>3D Spectrogram</string>
+         <string>3D Spektrogram</string>
         </property>
         <layout class="QVBoxLayout" name="verticalLayout_2">
          <item>
@@ -301,7 +313,14 @@
             </widget>
            </item>
            <item>
-            <widget class="QComboBox" name="comboBox_scaleFactor"/>
+            <widget class="QComboBox" name="comboBox_scaleFactor">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
+            </widget>
            </item>
           </layout>
          </item>
@@ -316,6 +335,12 @@
            </item>
            <item>
             <widget class="QSpinBox" name="spinBox_numLines">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
              <property name="minimum">
               <number>1</number>
              </property>
@@ -340,6 +365,12 @@
            </item>
            <item>
             <widget class="QDoubleSpinBox" name="doubleSpinBox_spacingX">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
              <property name="minimum">
               <double>0.010000000000000</double>
              </property>
@@ -367,6 +398,12 @@
            </item>
            <item>
             <widget class="QDoubleSpinBox" name="doubleSpinBox_spacingZ">
+             <property name="sizePolicy">
+              <sizepolicy hsizetype="MinimumExpanding" vsizetype="Fixed">
+               <horstretch>0</horstretch>
+               <verstretch>0</verstretch>
+              </sizepolicy>
+             </property>
              <property name="minimum">
               <double>0.100000000000000</double>
              </property>
