--- a/Software/audio-visualizer/aboutdialog.ui
+++ b/Software/audio-visualizer/aboutdialog.ui
@@ -10,6 +10,12 @@
     <height>150</height>
    </rect>
   </property>
+  <property name="minimumSize">
+   <size>
+    <width>250</width>
+    <height>150</height>
+   </size>
+  </property>
   <property name="maximumSize">
    <size>
     <width>250</width>
@@ -26,7 +32,7 @@
    <item>
     <widget class="QLabel" name="label">
      <property name="text">
-      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/icons/wave-sound.png&quot; width=&quot;50&quot; height=&quot;50&quot;/&gt;&lt;/p&gt;&lt;p&gt;VisualFREQ v1.0.0&lt;/p&gt;&lt;p&gt;Marijan Kovač © 2024&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;img src=&quot;:/icons/wave-sound.png&quot; width=&quot;30&quot; height=&quot;30&quot;/&gt;&lt;/p&gt;&lt;p&gt;VisualFREQ v1.0.0&lt;/p&gt;&lt;p&gt;Marijan Kovač © 2024&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
      </property>
      <property name="textFormat">
       <enum>Qt::TextFormat::AutoText</enum>
